syntax = "proto3";
option java_package = "grpcProtoFiles";
import "user.proto";
import "menu.proto";

package reservation;

service ReservationService {
    rpc createReservation(CreateReservationRequest) returns (CreateReservationResponse) {}
    rpc getReservation(GetReservationRequest) returns (GetReservationResponse) {}
    rpc getAllReservations(GetAllReservationsRequest) returns (GetAllReservationsResponse) {}
    rpc getReservationsByUser(GetReservationsByUserRequest) returns (GetReservationsByUserResponse) {}
}

message Reservation{
    int32 id = 1;
    user.User reservedBy = 2;
    menu.Menu menu = 3;
    int32 quantity = 4;
    bool isDelivered = 5;
}


message GetReservationsByUserRequest{
    string username = 1;
}

message GetReservationsByUserResponse{
    repeated Reservation reservations = 1;
}

message GetAllReservationsRequest{

}
message GetAllReservationsResponse{
    repeated Reservation reservations = 1;
}

message GetReservationRequest{
    int32 id = 1;
}

message GetReservationResponse{
    Reservation reservation = 1;
}

message CreateReservationRequest{
    int32 menuId = 1;
    string reservedByUsername = 2;
    int32 quantity = 3;
}

message CreateReservationResponse{
    Reservation reservation = 1;
}


